Utilisation de MapStruct et ajout de méthodes génériques.

--- a/blossom-core/blossom-core-common/pom.xml
+++ b/blossom-core/blossom-core-common/pom.xml
@@ -92,6 +92,13 @@
       <groupId>org.glassfish.jaxb</groupId>
       <artifactId>jaxb-runtime</artifactId>
     </dependency>
+
+    <!-- Libs -->
+    <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct</artifactId>
+      <version>${mapstruct.version}</version>
+    </dependency>
   </dependencies>
 
 
@@ -127,6 +134,28 @@
             <version>4.1.4</version>
           </dependency>
         </dependencies>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven-compiler-plugin.version}</version>
+        <configuration>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>org.mapstruct</groupId>
+              <artifactId>mapstruct-processor</artifactId>
+              <version>${mapstruct.version}</version>
+            </path>
+            <path>
+              <groupId>org.springframework.boot</groupId>
+              <artifactId>spring-boot-configuration-processor</artifactId>
+              <version>${springboot.version}</version>
+            </path>
+          </annotationProcessorPaths>
+          <generatedSourcesDirectory>
+            ${project.build.directory}/generated-sources-mapstruct
+          </generatedSourcesDirectory>
+        </configuration>
       </plugin>
     </plugins>
   </build>
