--- a/blossom-core/pom.xml
+++ b/blossom-core/pom.xml
@@ -14,6 +14,9 @@
 
   <name>Blossom Core</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <mapstruct.version>1.3.0.Final</mapstruct.version>
+  </properties>
 
   <modules>
     <module>blossom-core-common</module>
