--- a/blossom-core/blossom-core-association-user-group/pom.xml
+++ b/blossom-core/blossom-core-association-user-group/pom.xml
@@ -63,6 +63,28 @@
           </dependency>
         </dependencies>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven-compiler-plugin.version}</version>
+        <configuration>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>org.mapstruct</groupId>
+              <artifactId>mapstruct-processor</artifactId>
+              <version>${mapstruct.version}</version>
+            </path>
+            <path>
+              <groupId>org.springframework.boot</groupId>
+              <artifactId>spring-boot-configuration-processor</artifactId>
+              <version>${springboot.version}</version>
+            </path>
+          </annotationProcessorPaths>
+          <generatedSourcesDirectory>
+            ${project.build.directory}/generated-sources-mapstruct
+          </generatedSourcesDirectory>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
