--- a/blossom-core/pom.xml
+++ b/blossom-core/pom.xml
@@ -16,6 +16,7 @@
   <url>http://maven.apache.org</url>
   <properties>
     <mapstruct.version>1.3.0.Final</mapstruct.version>
+    <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
   </properties>
 
   <modules>
