--- a/blossom-modules/blossom-module-articles/pom.xml
+++ b/blossom-modules/blossom-module-articles/pom.xml
@@ -12,6 +12,10 @@
 
   <artifactId>blossom-module-articles</artifactId>
   <packaging>jar</packaging>
+  <properties>
+    <mapstruct.version>1.3.0.Final</mapstruct.version>
+    <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+  </properties>
 
   <dependencies>
     <dependency>
@@ -71,6 +75,28 @@
             <version>4.1.4</version>
           </dependency>
         </dependencies>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven-compiler-plugin.version}</version>
+        <configuration>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>org.mapstruct</groupId>
+              <artifactId>mapstruct-processor</artifactId>
+              <version>${mapstruct.version}</version>
+            </path>
+            <path>
+              <groupId>org.springframework.boot</groupId>
+              <artifactId>spring-boot-configuration-processor</artifactId>
+              <version>${springboot.version}</version>
+            </path>
+          </annotationProcessorPaths>
+          <generatedSourcesDirectory>
+            ${project.build.directory}/generated-sources-mapstruct
+          </generatedSourcesDirectory>
+        </configuration>
       </plugin>
     </plugins>
   </build>
